update color and remove the message box

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -60,7 +60,7 @@
 		</main>
 
 		<footer>
-			<p><em>Built with <a href="https://www.11ty.dev/">{{ eleventy.generator }}</a></em></p>
+			<p><em>Built with <a href="https://www.11ty.dev/">{{ eleventy.generator }}</a> and the <a href="https://github.com/11ty/eleventy-base-blog"><code>eleventy-base-blog</code></a></em></p>
 		</footer>
 
 		<!-- This page `{{ page.url }}` was built on {% currentBuildDate %} -->
