--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -54,13 +54,18 @@
 		</header>
 
 		<main id="skip">
+			
 			<heading-anchors>
+				<article class="flow">
 				{{ content | safe }}
+				</article>
 			</heading-anchors>
+		
+			
 		</main>
 
 		<footer>
-			<p><em>Built with <a href="https://www.11ty.dev/">{{ eleventy.generator }}</a> and the <a href="https://github.com/11ty/eleventy-base-blog"><code>eleventy-base-blog</code></a></em></p>
+			<p><em>Built with <a href="https://www.11ty.dev/">{{ eleventy.generator }}</a> and the <a href="https://github.com/11ty/eleventy-base-blog">Eleventy Base Blog</a></em></p>
 		</footer>
 
 		<!-- This page `{{ page.url }}` was built on {% currentBuildDate %} -->
