--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -20,6 +20,11 @@
 			* Retrieve via `{% getBundle "js" %}` or `{% getBundleFileUrl "js" %}`
 		3. Learn more: https://github.com/11ty/eleventy-plugin-bundle
 		#}
+		<link rel="preload"
+      href="./fonts/InterVariable.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous">
 
 		{#- Add an arbitrary string to the bundle #}
 		{%- css %}/* This is an arbitrary CSS string added to the bundle */{% endcss %}
