update link to fonts

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -21,7 +21,7 @@
 		3. Learn more: https://github.com/11ty/eleventy-plugin-bundle
 		#}
 		<link rel="preload"
-      href="./fonts/InterVariable.woff2"
+      href="https://claudiasnell.github.io/fonts/InterVariable.woff2"
       as="font"
       type="font/woff2"
       crossorigin="anonymous">
