added a temporary-ish avatar

--- a/content/index.njk
+++ b/content/index.njk
@@ -7,9 +7,15 @@ const eleventyNavigation = {
 const numberOfLatestPostsToShow = 3;
 ---
 
-
+<div class="intro">
+  <img src="/profile-pic/notion-avatar-green-250.png" alt="my notion avatar">
+  <div>
 <h1>Claudia Snell: Front-end Web Developer & Coffee Enthusiast</h1>
 <p class="lede">A place to keep links to my profiles and projects.</p>
+</div>
+
+
+</div>
 
 <h2>Follow me</h2>
 <ul>
