updated the avatar to my funko pop self

--- a/content/index.njk
+++ b/content/index.njk
@@ -8,7 +8,7 @@ const numberOfLatestPostsToShow = 3;
 ---
 
 <div class="intro">
-  <img src="/profile-pic/notion-avatar-green-250.png" alt="my notion avatar">
+  <img src="/profile-pic/pop-avatar-orange.png" alt="my notion avatar" width="250" height="250">
   <div>
 <h1>Claudia Snell: Front-end Web Developer & Coffee Enthusiast</h1>
 <p class="lede">A place to keep links to my profiles and projects.</p>
