remove an asterisk

--- a/_includes/elsewhere.njk
+++ b/_includes/elsewhere.njk
@@ -62,7 +62,7 @@
 <ul>
     <li>My website: <a href="https://claudiasnell.com">claudiasnell.com</a></li>
   <li>My photography blog: <a href="https://angleofview.com">Angle of View</a></li>
-    <li>My personal site of nonsense: <a href="https://claudiasnell.dev">Claudia Snell's Nonsense</a>*</li>
+    <li>My personal site of nonsense: <a href="https://claudiasnell.dev">Claudia Snell's Nonsense</a></li>
   <li>The space-themed version of my personal site: <a href="https://flourishing-dolphin.netlify.app/">Space Nonsense (archived - sort of)</a></li>
 </ul>
 </div>
